--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "typescript_helloworld",
+  "name": "typescript and node js 45 Assignments.",
   "version": "1.0.0",
-  "description": "",
+  "description": "In this typescript files we solved  all 45 assignments of governor house IT initative.(Batch 1).",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Nousheen Atif.(ROLL NO : 00176135)",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.11.19"
